SAM-1162
git-svn-id: https://source.sakaiproject.org/svn/sam/trunk@90405 66ffb92e-73f9-0310-93c1-f5514f145a0a